1999-08-06  Morten Welinder  <terra@diku.dk>

       * gnome-canvas.c (shutdown_transients): Plug leak.

1999-08-04  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-pixmap-entry.c (ensure_update): New function to ensure
	that a pixmap entry is not in the wait queue for updates.
	(gnome_pixmap_entry_get_filename): Fixed a race condition where
	this function would return an incorrect NULL if the client called
	it before the pixmap entry update timer expires.  This would make
	the panel crash.

1999-08-04  Morten Welinder  <terra@diku.dk>

	* gnome-stock.c (gnome_stock_destroy): Unref pixmaps.

1999-08-04  Larry Ewing  <lewing@gimp.org>

	* gnome-canvas.c (gnome_canvas_item_affine_relative): BUGFIX: make sure
	that we properly set the GNOME_CANVAS_ITEM_AFFINE_FULL flag when 
	appropriate.

1999-07-31  Tom Tromey  <tromey@cygnus.com>

	* gnome-client.c (gnome_client_request_save): Don't prompt for
	logout.  This is now handled in the session manager.

1999-07-31    <dmg@csg.uwaterloo.ca>

	* gnome-file-entry.c: Updated the comments in the functions to
	make them more explicit.

1999-07-28  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-list.c (gnome_icon_list_remove): Use icon->selected,
	not icon->text->selected.  Consider GTK_SELECTION_EXTENDED as
	well.
	(select_icon): Likewise.
	(unselect_icon): Consider GTK_SELECTION_EXTENDED as well.
	(sync_selection): HOW DID THIS EVER WORK!?  This has to sync the
	gil->selection, not the list of icons itself.  It seems that no
	one ever inserted or deleted icons, just appended them.
	(icon_new_from_imlib): Do not use broken event handling for the
	icon text item.
	(selection_one_icon_event): Turn on editing in the icon text item
	if appropriate.  Adjusted for sane event handling; this makes the
	code simpler as well.  Ref/unref the text item since it may be
	destroyed by one of the signal handlers.
	(selection_many_icon_event): Likewise.
